kubernetes/apps/default/librechat/app/tailscale-egress.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/v1/service_v1.json
apiVersion: v1
kind: Service
metadata:
  name: llama-swap
  annotations:
    tailscale.com/tailnet-fqdn: disco-ninja.tail88eb4.ts.net.
spec:
  type: ExternalName
  externalName: placeholder
  ports:
    - name: llama-swap
      port: 8080
      protocol: TCP
